# llm-benchmarker

./: .gitignore  README.md  pyproject.toml
notebooks/: llm-benchmark-guide.ipynb  mmlu.ipynb
