[project]
name = "llm-benchmarker"
version = "0.0.1-alpha"
authors = [
    { name = "David Hundley", email = "david.k.hundley@gmail.com"}
]
license = "Apache-2.0"
description = "A simple to way to run LLM benchmarks!"
readme = "README.md"
dependencies = [
    "langchain>=0.1.4"
]
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/dkhundley/llm-benchmarker"
Repository = "https://github.com/dkhundley/llm-benchmarker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"